@@ -1,5 +1,6 @@
 Version 2.02.169 - 
 =====================================
+  Report thin LV date for merged LV when the merge is in progress.
   Detect if snapshot merge really started before polling for progress.
   Checking LV for merging origin requires also it has merged snapshot.
   Extend validation of metadata processing.
